tests/base/parser/bad/lib/lmodule-import-contract.scillib
scilla_version 0

import contract

library TestLib
